--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body{
   color: #FFFFFF;
   background: #2C2C2C;
   border-right: 20px solid red;
-  width:920px;
+  max-width:920px;
   margin:0 auto;
   margin-top: 25vh;
   margin-bottom: 10px;
@@ -19,6 +19,7 @@ body{
   padding-right:5px; 
   font-size: 20px; 
 }
+
 
 *{
   font-family: Arial, Helvetica, sans-serif;
